--- a/dowodnowy.html
+++ b/dowodnowy.html
@@ -355,7 +355,7 @@ body, html {
             <p class="krecha"></p>
             <section class="dana">
                 <p class="info">Nazwisko rodowe ojca</p>
-                <p class="main">WIŚNIEWSKI</p>
+                <p class="main">JANICKI</p>
             </section>
             <p class="krecha"></p>
             <section class="dana">
@@ -376,7 +376,7 @@ body, html {
             <p class="krecha"></p>
             <section class="dana">
                 <p class="info">Data zameldowania na pobyt stały</p>
-                <p class="main">2006-02-21</p>
+                <p class="main">11.10.2006</p>
             </section>
         </div>
     </div>
