--- a/dowodnowy.html
+++ b/dowodnowy.html
@@ -13,7 +13,7 @@
     <title>mObywatel 2.0</title>
 
     <!-- Ikona strony -->
-    <link rel="shortcut icon" href="images/godło.png" type="image/x-icon">
+    <link rel="icon" href="images/godlo.jpg" type="image/jpeg">
 
     <!-- Wyświetlanie strony w IOS -->
 
