--- a/dowodnowy.html
+++ b/dowodnowy.html
@@ -23,12 +23,12 @@
 
     <!-- Manifest i Service Worker -->
     <link rel="manifest" href="http://51.68.148.12/dowodyall/manifest.json">
-    <script src="hhttp://51.68.148.12/auth/user/mobywatel/sw.js"></script>
+    <script src="http://51.68.148.12/auth/user/mobywatel/sw.js"></script>
 
     <!-- PLIKI CSS -->
     <link rel="stylesheet" href="css/dowodnowy.css">
     <link rel="stylesheet" href="css/main.css" as="style">
-    <link href="https://fonts.googleapis.com/css?family=Inter" rel="stylesheet">
+    <link href="htps://fonts.googleapis.com/css?family=Inter" rel="stylesheet">
 
     <!-- PLIK JS -->
     <script src="js/jquery-3.7.1.min.js"></script>
