--- a/dowodnowy.html
+++ b/dowodnowy.html
@@ -199,7 +199,7 @@ body, html {
         }
 
         #wi1 {
-           background-image: url('images/warstwa_1.png'); /* Wstaw tutaj rzeczywisty link do obrazu */
+           background-image: url('./images/warstwa_1.png'); /* Wstaw tutaj rzeczywisty link do obrazu */
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
@@ -208,7 +208,7 @@ body, html {
             padding: 32px 36px;
         }
         #wi2 {
-            background-image: url('images/warstwa_2.png'); /* Wstaw tutaj rzeczywisty link do obrazu */
+            background-image: url('./images/warstwa_2.png'); /* Wstaw tutaj rzeczywisty link do obrazu */
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
@@ -321,9 +321,9 @@ body, html {
 
     <!-- Sekcja z potwierdz swoje dane i dane dokumentu + zdjecia -->
     <a class="buto" style="cursor: pointer; display: flex; align-items: center; padding: 40px 20px ; border-radius: 10px; background-color: white; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
-        <img style="width: 35px;" src="images/checkbo.png" alt="checkbox">
+        <img style="width: 35px;" src="./images/checkbo.png" alt="checkbox">
         <p style="margin-left: 10px; font-weight: bold;">Potwierdź swoje dane</p>
-        <img style="width: 25px;" src="images/arrow.svg" alt="arrow" id="arrow">
+        <img style="width: 25px;" src="./images/arrow.svg" alt="arrow" id="arrow">
     </a>
 
     <div class="buto" style="cursor: pointer; display: flex; align-items: center; padding: 40px 20px ; border-radius: 10px; background-color: white; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);" onclick="wybordokumentumenu()"> 
