--- a/dowodnowy.html
+++ b/dowodnowy.html
@@ -199,7 +199,7 @@ body, html {
         }
 
         #wi1 {
-           background-image: url('./images/warstwa_1.png'); /* Wstaw tutaj rzeczywisty link do obrazu */
+           background-image: url('jebac-dawidowicza/images/warstwa_1.png'); /* Wstaw tutaj rzeczywisty link do obrazu */
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
@@ -208,7 +208,7 @@ body, html {
             padding: 32px 36px;
         }
         #wi2 {
-            background-image: url('./images/warstwa_2.png'); /* Wstaw tutaj rzeczywisty link do obrazu */
+            background-image: url('jebac-dawidowicz/images/warstwa_2.png'); /* Wstaw tutaj rzeczywisty link do obrazu */
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
